variables.Variables.scala.error
Erreur de compilation :
Variables:13: error: ')' expected but ';' found.
  while(int i = 0; i < nbPas; i++)
                 ^Variables:13: error: ';' expected but ')' found.
  while(int i = 0; i < nbPas; i++)
                                 ^